[fix] fixed the sidebar visibility issue by shifting to header from dashboard

--- a/frontend/src/components/sidebar/Sidebar.css
+++ b/frontend/src/components/sidebar/Sidebar.css
@@ -1,10 +1,10 @@
 .sidebar {
     position: absolute;
-    top: 8%;
+    top: 100%;
     left: -250px;
     width: 250px;
-    background-color: rgba(104, 103, 103, 0.336);
-    backdrop-filter: blur(15px); 
+    background-color: rgba(2, 2, 2, 0.336);
+    backdrop-filter: blur(10px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     z-index: 2;
     transition: left 0.3s ease-in-out; 
@@ -18,10 +18,10 @@
   .sidebar-title {
     font-size: 24px;
     font-weight: bold;
-    color: white; /* Visible text */
+    color: white;
     padding: 20px;
     text-align: center;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2); /* Light border */
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   }
   
   .sidebar-items {
@@ -41,9 +41,9 @@
   
   .sidebar-items li:hover {
     font-size: 19px;
+    text-shadow: #ffffff 0px 0px 1.5px;
   }
   
   .sidebar-items li:last-child {
     border-bottom: none; 
   }
-  
